# openbtg

./: .travis.yml  CMakeLists.txt  README.md  mingw-w64-x86_64.cmake
.github/workflows/: ci.yaml
